# VirtualCam

./: CMakeLists.txt  DllSetup.cpp  VersionInfo.h  VirtualCam.cpp  VirtualCam.def  VirtualCam.h
scripts/: build.bat
